Trying to fix broken CSS.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,8 @@ body {
 h1,
 h2,
 h3,
-p {
+p,
+.useInPlaceOfh3 {
   margin-bottom: 20px;
 }
 
@@ -32,7 +33,8 @@ p:last-child {
 
 h1,
 h2,
-h3 {
+h3,
+.useInPlaceOfh3 {
   font-family: Georgia, Times, "Times New Roman", serif;
   font-weight: 700;
   color: #4aaaa5;
@@ -46,7 +48,8 @@ h1 {
 }
 
 h2,
-h3 {
+h3,
+.useInPlaceOfh3 {
   font-size: 22px;
 }
 
@@ -110,7 +113,7 @@ footer {
   height: 50px;
 }
 
-h3, h2 {
+h3, h2, .useInPlaceOfh3 {
   padding-bottom: 20px;
   margin-bottom: 15px;
   line-height: 22px;
@@ -154,7 +157,7 @@ h3, h2 {
   opacity: 0.8;
 }
 
-.work h3 {
+.work h3 .useInPlaceOfh3{
   position: absolute;
   bottom: 20px;
   width: 100%;
